--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.io/javascript_calculator",
   "name": "calc",
   "version": "0.1.0",
   "private": true,
@@ -40,5 +41,4 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://github.io/javascript_calculator"
 }
